--- a/src/html/repair.html
+++ b/src/html/repair.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"
     />
-    <link rel="stylesheet" href="assets/css/main.min.css" />
+    <link rel="stylesheet" href="../../public/css/main.min.css" />
   </head>
   <body>
     <div
@@ -36,7 +36,7 @@
       class="align-items-center justify-content-center"
     >
       <div class="msgWrap">
-        <img src="assets/images/icons/touch-screen.png" width="100" alt="" />
+        <img src="../assets/images/icons/touch-screen.png" width="100" alt="" />
         <p>Please rotate your device!</p>
       </div>
     </div>
