final routing and setup

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 		/>
 		<link rel="stylesheet" href="/assets/css/main.min.css" />
 	</head>
-	<body>
+	<body class="editActive">
 		<div id="root" class="site-wrapper"></div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.js"></script>
