--- a/src/rev_html/collaborate.html
+++ b/src/rev_html/collaborate.html
@@ -20,15 +20,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css"
 		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"
-		/>
-		<link rel="stylesheet" href="assets/css/main.min.css" />
+		<link rel="stylesheet" href="../../public/assets/css/main.min.css" />
 	</head>
 	<body>
 		<div
@@ -36,7 +28,7 @@
 			class="align-items-center justify-content-center"
 		>
 			<div class="msgWrap">
-				<img src="assets/images/icons/touch-screen.png" width="100" alt="" />
+				<img src="/assets/images/icons/touch-screen.png" width="100" alt="" />
 				<p>Please rotate your device!</p>
 			</div>
 		</div>
@@ -213,238 +205,167 @@
 				</div>
 			</header>
 			<!-- banner -->
-			<section class="supportPageBanner">
-				<div class="contentWrap">
-					<div class="sectionWrapper">
-						<div
-							class="row align-items-center justify-content-center no-gutters"
-						>
-							<div class="col-lg-7 mx-auto text-center">
-								<h1>
-									Have any doubts? <br />
-									Let us solve it for you
-								</h1>
-								<p>
-									Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-									Quasi aspernatur harum ut adipisci, earum soluta praesentium
-									consequatur ea veritatis neque fuga
+			<section class="collaborateBanner">
+				<div class="row align-items-center justify-content-betweem">
+					<div class="col-12 col-lg-5">
+						<div class="content">
+							<h1>Have a shop ? Collaborate With Us</h1>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quo
+								quia aspernatur, dolor ducimus porro dolores, alias, nostrum ea
+								asperiores facere cupiditate. Eligendi praesentium tenetur
+								nostrum nulla aliquam expedita assumenda.
+							</p>
+							<a href="#register" class="registerBtn">
+								<span class="gradientText">Register Now</span>
+							</a>
+						</div>
+					</div>
+					<div class="col-12 col-lg-7">
+						<img
+							src="https://image.freepik.com/free-photo/modern-man-working-electronics-service-shop_1098-15487.jpg"
+							alt=""
+						/>
+					</div>
+				</div>
+			</section>
+			<!-- whyus -->
+			<section class="whyCollaborate">
+				<div class="sectionWrapper">
+					<div class="row no-gutters">
+						<div class="col-12">
+							<div class="title text-center">
+								<h2>Why Us</h2>
+								<p class="mx-auto">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Aliquid quisquam perspiciatis architecto? Dolores impedit
 								</p>
-								<img
-									src="assets/images/icons/faqa.svg"
-									class="mt-1"
-									width="350"
-									alt=""
-								/>
+							</div>
+						</div>
+					</div>
+					<div
+						class="row no-gutters mt-2 align-items-center justify-content-between"
+					>
+						<div class="col-12 col-lg-6">
+							<div
+								class="whyUsWrap d-flex align-items-center justify-content-betweem"
+							>
+								<div class="imgWrap">
+									<img src="assets/images/icons/faqa.svg" height="80" alt="" />
+								</div>
+								<div class="content">
+									<h3>Lorem Ipsum</h3>
+									<p class="mb-0">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Obcaecati nesciunt nemo quae dolore
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-12 col-lg-6">
+							<div
+								class="whyUsWrap d-flex align-items-center justify-content-betweem"
+							>
+								<div class="imgWrap">
+									<img src="assets/images/icons/faqa.svg" height="80" alt="" />
+								</div>
+								<div class="content">
+									<h3>Lorem Ipsum</h3>
+									<p class="mb-0">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Obcaecati nesciunt nemo quae dolore
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-12 col-lg-6">
+							<div
+								class="whyUsWrap d-flex align-items-center justify-content-betweem"
+							>
+								<div class="imgWrap">
+									<img src="assets/images/icons/faqa.svg" height="80" alt="" />
+								</div>
+								<div class="content">
+									<h3>Lorem Ipsum</h3>
+									<p class="mb-0">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Obcaecati nesciunt nemo quae dolore
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-12 col-lg-6">
+							<div
+								class="whyUsWrap d-flex align-items-center justify-content-betweem mb-0"
+							>
+								<div class="imgWrap">
+									<img src="assets/images/icons/faqa.svg" height="80" alt="" />
+								</div>
+								<div class="content">
+									<h3>Lorem Ipsum</h3>
+									<p class="mb-0">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Obcaecati nesciunt nemo quae dolore
+									</p>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<!-- faqs -->
-			<section class="faqsWrap">
+			<!-- whatweneed -->
+			<section class="whatWeNeed">
 				<div class="sectionWrapper">
-					<div class="row no-gutters justify-content-center">
+					<div class="row no-gutters">
 						<div class="col-12">
-							<div class="slider slider-nav">
-								<div class="faqNavBlock">
-									<i class="glyph-icon flaticon-user"></i>
-									<p>General</p>
-								</div>
-								<div class="faqNavBlock">
-									<i class="glyph-icon flaticon-configuration"></i>
-									<p>Repair</p>
-								</div>
-								<div class="faqNavBlock">
-									<i class="glyph-icon flaticon-payment-method"></i>
-									<p>Payment</p>
-								</div>
-								<div class="faqNavBlock">
-									<i class="glyph-icon flaticon-box"></i>
-									<p>Pick Up, Drop & Delivery</p>
-								</div>
+							<div class="title text-center">
+								<h2>Why You Need</h2>
+								<p class="mx-auto">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Aliquid quisquam perspiciatis architecto? Dolores impedit
+								</p>
 							</div>
 						</div>
-						<div class="col-12">
-							<div class="slider slider-for">
-								<div id="accordionExample" class="accordion">
-									<!-- Accordion item 1 -->
-									<div class="card">
-										<div
-											id="headingOne"
-											class="card-header bg-white border-0 m-0"
-										>
-											<h2 class="mb-0">
-												<button
-													type="button"
-													data-toggle="collapse"
-													data-target="#collapseOne"
-													aria-expanded="false"
-													aria-controls="collapseOne"
-													class="btn btn-link collapsed w-100 position-relative text-left collapsible-link"
-												>
-													Will your technician also fix any other issue of my
-													phone?
-												</button>
-											</h2>
-										</div>
-										<div
-											id="collapseOne"
-											aria-labelledby="headingOne"
-											data-parent="#accordionExample"
-											class="collapse"
-										>
-											<div class="card-body">
-												<p class="font-weight-light m-0">
-													It is definitely on the cards but for now, we only
-													offer the services listed on our platform. Please let
-													us know in advance for any issue with your device and,
-													we will try our best to help.
-												</p>
-											</div>
-										</div>
-									</div>
-									<!-- End -->
-								</div>
-								<div id="accordionExampleTwo" class="accordion">
-									<!-- Accordion item 2 -->
-									<div class="card">
-										<div id="headingTwo" class="card-header bg-white border-0">
-											<h2 class="mb-0">
-												<button
-													type="button"
-													data-toggle="collapse"
-													data-target="#collapseTwo"
-													aria-expanded="false"
-													aria-controls="collapseTwo"
-													class="btn btn-link collapsed w-100 position-relative text-left  collapsible-link"
-												>
-													Will your technician also fix any other issue of my
-													phone?
-												</button>
-											</h2>
-										</div>
-										<div
-											id="collapseTwo"
-											aria-labelledby="headingTwo"
-											data-parent="#accordionExampleTwo"
-											class="collapse"
-										>
-											<div class="card-body">
-												<p class="font-weight-light m-0">
-													It is definitely on the cards but for now, we only
-													offer the services listed on our platform. Please let
-													us know in advance for any issue with your device and,
-													we will try our best to help.
-												</p>
-											</div>
-										</div>
-									</div>
-									<!-- End -->
-								</div>
-								<div id="accordionExampleThree" class="accordion">
-									<!-- Accordion item 3 -->
-									<div class="card">
-										<div id="headingFour" class="card-header bg-white border-0">
-											<h2 class="mb-0">
-												<button
-													type="button"
-													data-toggle="collapse"
-													data-target="#collapseFour"
-													aria-expanded="false"
-													aria-controls="collapseFour"
-													class="btn btn-link collapsed w-100 position-relative text-left  collapsible-link"
-												>
-													Will your technician also fix any other issue of my
-													phone?
-												</button>
-											</h2>
-										</div>
-										<div
-											id="collapseFour"
-											aria-labelledby="headingFour"
-											data-parent="#accordionExampleThree"
-											class="collapse"
-										>
-											<div class="card-body">
-												<p class="font-weight-light m-0">
-													It is definitely on the cards but for now, we only
-													offer the services listed on our platform. Please let
-													us know in advance for any issue with your device and,
-													we will try our best to help.
-												</p>
-											</div>
-										</div>
-									</div>
-									<!-- End -->
-								</div>
-								<div id="accordionExampleFour" class="accordion">
-									<!-- Accordion item 3 -->
-									<div class="card">
-										<div id="headingFive" class="card-header bg-white border-0">
-											<h2 class="mb-0">
-												<button
-													type="button"
-													data-toggle="collapse"
-													data-target="#collapseFive"
-													aria-expanded="false"
-													aria-controls="collapseFive"
-													class="btn btn-link collapsed w-100 position-relative text-left  collapsible-link"
-												>
-													Will your technician also fix any other issue of my
-													phone?
-												</button>
-											</h2>
-										</div>
-										<div
-											id="collapseFive"
-											aria-labelledby="headingFive"
-											data-parent="#accordionExampleFour"
-											class="collapse"
-										>
-											<div class="card-body">
-												<p class="font-weight-light m-0">
-													It is definitely on the cards but for now, we only
-													offer the services listed on our platform. Please let
-													us know in advance for any issue with your device and,
-													we will try our best to help.
-												</p>
-											</div>
-										</div>
-									</div>
-									<!-- End -->
-									<div class="card">
-										<div id="headingSix" class="card-header bg-white border-0">
-											<h2 class="mb-0">
-												<button
-													type="button"
-													data-toggle="collapse"
-													data-target="#collapseSix"
-													aria-expanded="false"
-													aria-controls="collapseSix"
-													class="btn btn-link collapsed w-100 position-relative text-left  collapsible-link"
-												>
-													Will your technician also fix any other issue of my
-													phone?
-												</button>
-											</h2>
-										</div>
-										<div
-											id="collapseSix"
-											aria-labelledby="headingSix"
-											data-parent="#accordionExampleFour"
-											class="collapse"
-										>
-											<div class="card-body">
-												<p class="font-weight-light m-0">
-													It is definitely on the cards but for now, we only
-													offer the services listed on our platform. Please let
-													us know in advance for any issue with your device and,
-													we will try our best to help.
-												</p>
-											</div>
-										</div>
-									</div>
-								</div>
+						<div class="col-12 col-lg-4">
+							<div class="needWrap">
+								<img
+									src="assets/images/icons/faqa.svg"
+									height="120"
+									class="mb-4"
+									alt=""
+								/>
+								<p class="font-weight-light mb-0">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
+									est dolorum, dolorem odio Eius est dolorum, dolorem odio
+								</p>
+							</div>
+						</div>
+						<div class="col-12 col-lg-4">
+							<div class="needWrap">
+								<img
+									src="assets/images/icons/faqa.svg"
+									height="120"
+									class="mb-4"
+									alt=""
+								/>
+								<p class="font-weight-light mb-0">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
+									est dolorum, dolorem odio Eius est dolorum, dolorem odio
+								</p>
+							</div>
+						</div>
+						<div class="col-12 col-lg-4">
+							<div class="needWrap">
+								<img
+									src="assets/images/icons/faqa.svg"
+									height="120"
+									class="mb-4"
+									alt=""
+								/>
+								<p class="font-weight-light mb-0">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
+									est dolorum, dolorem odio Eius est dolorum, dolorem odio
+								</p>
 							</div>
 						</div>
 					</div>
@@ -458,7 +379,7 @@
 							<img src="assets/images/icons/collaborate.svg" alt="" />
 						</div>
 						<div class="col-12 col-lg-6">
-							<p class="pill text-capitalize">repair</p>
+							<p class="pill text-capitalize">join us</p>
 							<h2 class="text-capitalize">
 								have a issue in your mobile <br />
 								let us fix it for you
@@ -469,9 +390,9 @@
 							</p>
 							<div class="d-flex flex-wrap buttons justify-content-start">
 								<a href="javascript:void(0);">
-									<span>repair now</span>
+									<span>register now</span>
 								</a>
-								<a href="javascript:void(0)">collaborate</a>
+								<a href="javascript:void(0)">about us</a>
 							</div>
 						</div>
 					</div>
@@ -492,7 +413,7 @@
 					<div class="footerWrapper d-flex flex-wrap justify-content-center">
 						<div class="footerComponent about">
 							<a href="javascript:void(0)" class="logo">
-								<img src="/assets/images/logo.png" width="100" alt="" />
+								<img src="assets/images/logo.png" width="100" alt="" />
 							</a>
 							<p>
 								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -808,52 +729,6 @@
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
 		<script src="assets/js/common.js"></script>
-		<script>
-			$(".slider-for").slick({
-				slidesToShow: 1,
-				slidesToScroll: 1,
-				arrows: false,
-				fade: true,
-				asNavFor: ".slider-nav"
-			});
-			$(".slider-nav").slick({
-				slidesToShow: 4,
-				slidesToScroll: 1,
-				asNavFor: ".slider-for",
-				dots: false,
-				centerMode: false,
-				infinite: false,
-				focusOnSelect: true,
-				responsive: [
-					{
-						breakpoint: 991,
-						settings: {
-							slidesToShow: 3,
-							slidesToScroll: 1,
-							dots: true,
-							variableWidth: true,
-							infinite: true,
-							centerMode: true
-						}
-					},
-					{
-						breakpoint: 480,
-						settings: {
-							slidesToShow: 2,
-							slidesToScroll: 1,
-							dots: true,
-							variableWidth: true,
-							infinite: true,
-							centerMode: true
-						}
-					}
-					// You can unslick at a given breakpoint now by adding:
-					// settings: "unslick"
-					// instead of a settings object
-				]
-			});
-		</script>
 	</body>
 </html>
