Minor changes for design

--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
 <html class="mdds" lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>MDDS | Get your phone repaired | Home</title>
-		<link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MDDS | Get your phone repaired | Home</title>
+    <!-- <link
 			href="https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap"
 			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css?family=Prompt:300,400,500&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"
-		/>
-		<link rel="stylesheet" href="/assets/css/main.min.css" />
-	</head>
-	<body >
-		<div id="root" class="site-wrapper"></div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
-		<script>
-			(function () {
-				var words = [
-						"contact us today for repairing your phone",
-						"apply coupon <span>'newuser'</span> for getting special discount",
-					],
-					i = 0;
-				setInterval(function () {
-					$("#changingword").fadeOut(function () {
-						$(this)
-							.html(words[(i = (i + 1) % words.length)])
-							.fadeIn();
-					});
-				}, 4000);
-			})();
-		</script>
-	</body>
+		/> -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Prompt:300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"
+    />
+    <link rel="stylesheet" href="/assets/css/main.min.css" />
+  </head>
+  <body>
+    <div id="root" class="site-wrapper"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
+    <script>
+      (function () {
+        var words = [
+            "contact us today for repairing your phone",
+            "apply coupon <span>'newuser'</span> for getting special discount",
+          ],
+          i = 0;
+        setInterval(function () {
+          $("#changingword").fadeOut(function () {
+            $(this)
+              .html(words[(i = (i + 1) % words.length)])
+              .fadeIn();
+          });
+        }, 4000);
+      })();
+    </script>
+  </body>
 </html>
